# learning-haskell-typeclasses

./: README.md  learning-haskell-typeclasses.cabal
src/: Lib.hs
